--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
     "copyindex": "cp index.html distribution/index.html",
     "build": "npm run bundle && npm run less && npm run copyindex",
     "lintless": "stylelint styles.less",
-    "lintjs": "eslint ."
+    "lintts": "tslint -c tslint.json '*.ts'"
   },
   "author": "Tuffvid",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
-    "eslint": "^4.12.0",
+    "@types/jquery": "^3.3.1",
     "less": "^2.7.3",
     "stylelint": "^8.3.1",
     "ts-loader": "^4.0.1",
+    "tslint": "^5.9.1",
     "typescript": "^2.7.2",
-    "webpack": "^3.8.1"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12"
   }
 }
